resources/assets/sass/_custom.scss
/* ... */
.d-none {
  @include media-breakpoint-up(sm) {
    &.d-sm-inline {
      display: inline !important;
    }
  }
}

.sidebar-nav{
  background-color:#434f59 !important;
}

.sidebar-minimizer{
  background-color:#384550 !important;
}

.nav-item a:hover{
background-color: #3082CF !important;
}

.main, .main .container-fluid{
  background-color:#f3f3f3 !important;
}

.container-fluid{
  background-color:#f3f3f3 !important;
}

body.login, body.register {
  background-image: url("meal-prep-kitchen.jpg");
  background-repeat: no-repeat;
  background-size: cover;

  .main, .container-fluid {
    background-color: transparent !important;
  }
}


.navbar-brand-minimized{
  position:relative !important;
  left:130px !important;
}

.white-text{
  color:#ffffff !important;
}


.storeFilters {
  @include media-breakpoint-down(sm) {
    display: flex;
    flex-wrap: wrap;

    .btn {
      flex-basis: 50%;
      margin-bottom: 0.5rem;
    }
  }

  @include media-breakpoint-down(lg) {
    display: flex;
    flex-wrap: wrap;

    .btn {
      flex-basis: 25%;
      flex-grow: 0;
      margin-bottom: 0.5rem;
    }
  }
}

